Updated formatting certain pages

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 									</a>
 									<div class="description">
 										<h3>Tutoring</h3>
-										<a href="#">Learn More</a>
+										<!--<a href="#">Learn More</a>-->
 									</div>
 								</div>
 								<div class="item">
