--- a/personal-projects.html
+++ b/personal-projects.html
@@ -16,7 +16,8 @@
 			.item img {
 				display: block;
 				width: 100%;
-				height: auto;
+				height: 320px; /* Adjust this value to set the desired height for the images */
+				object-fit: cover;
 				transition: transform 0.3s;
 			}
 			.item:hover img {
@@ -175,10 +176,10 @@
 									</div>
 									<div class="item">
 										<a href="project-networkvulnerabilities.html" class="image fit">
-											<img src="images/uac.png" alt="" />
+											<img src="images/webvuln.png" alt="" />
 										</a>
 										<div class="description">
-											<h3>Personal Projects</h3>
+											<h3>Website Vulnerabilities</h3>
 											<a href="project-networkvulnerabilities.html">Learn More</a>
 										</div>
 									</div>
