--- a/project-calradia.html
+++ b/project-calradia.html
@@ -19,10 +19,17 @@
 		/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
-			.tab-like{
-				text-indent: 20px;
-			}
-		</style>
+      .tab-like {
+        text-indent: 20px;
+      }
+
+      .image-item {
+        height: 350px;
+        width: 100%;
+        object-fit: cover;
+        cursor: pointer;
+      }
+    </style>
 	</head>
 	<body class="is-preload">
 		<!-- Header -->
@@ -151,135 +158,62 @@
 					<div class="row">
 						<div class="col-4 col-12-mobile">
 							<article class="item">
-								<img
-									src="images/calradiaRPG/Intro Image.PNG"
-									onclick="openModal('images/calradiaRPG/Intro Image.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/Intro Image.PNG"	class="image-item" onclick="openModal('images/calradiaRPG/Intro Image.PNG')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/Intro Image.PNG"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/Intro Image.PNG" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Calradia RPG Welcome Page</h3>
 								</header>
 							</article>
 							<article class="item">
-								<img
-									src="images/calradiaRPG/Battle GUI.PNG"
-									onclick="openModal('images/calradiaRPG/Battle GUI.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/Battle GUI.PNG" class="image-item" onclick="openModal('images/calradiaRPG/Battle GUI.PNG')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/Battle GUI.PNG"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/Battle GUI.PNG" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Battle Graphical User Interface (GUI)</h3>
 								</header>
 							</article>
 							<article class="item">
-								<img
-									src="images/calradiaRPG/Input Character GUI.PNG"
-									onclick="openModal('images/calradiaRPG/Input Character GUI.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/Input Character GUI.PNG" class="image-item" onclick="openModal('images/calradiaRPG/Input Character GUI.PNG')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/Input Character GUI.PNG"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/Input Character GUI.PNG" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Character Creation Page</h3>
 								</header>
 							</article>
-							<article class="item">
-								<img
-									src="images/calradiaRPG/Score.PNG"
-									onclick="openModal('images/calradiaRPG/Score.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
-								<div id="myModal">
-									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/Score.PNG"
-										alt="Full-size Image"
-									/>
-								</div>
-								<header>
-									<h3>Score Page</h3>
-								</header>
-							</article>
 						</div>
 						<div class="col-4 col-12-mobile">
 							<article class="item">
-								<img
-									src="images/calradiaRPG/BattleSystem.PNG"
-									onclick="openModal('images/calradiaRPG/BattleSystem.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/BattleSystem.PNG" class="image-item" onclick="openModal('images/calradiaRPG/BattleSystem.PNG')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/BattleSystem.PNG"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/BattleSystem.PNG" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Encounter (Battle System)</h3>
 								</header>
 							</article>
 							<article class="item">
-								<img
-									src="images/calradiaRPG/DeathPage.PNG"
-									onclick="openModal('images/calradiaRPG/DeathPage.PNG')"
-									style="height: 70%; width: 100%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/DeathPage.PNG" class="image-item" onclick="openModal('images/calradiaRPG/DeathPage.PNG')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/DeathPage.PNG"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/DeathPage.PNG" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Character's Death Page</h3>
 								</header>
 							</article>
 							<article class="item">
-								<img
-									src="images/calradiaRPG/loginSys flowchart.png"
-									onclick="openModal('images/calradiaRPG/loginSys flowchart.png')"
-									style="height: 70%; width: 50%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/loginSys flowchart.png" class="image-item" onclick="openModal('images/calradiaRPG/loginSys flowchart.png')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/loginSys flowchart.png"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/loginSys flowchart.png" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Flowchart for Login System</h3>
@@ -288,41 +222,33 @@
 						</div>
 						<div class="col-4 col-12-mobile">
 							<article class="item">
-								<img
-									src="images/calradiaRPG/gameflowchart.png"
-									onclick="openModal('images/calradiaRPG/gameflowchart.png')"
-									style="height: 70%; width: 70%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/gameflowchart.png" class="image-item" onclick="openModal('images/calradiaRPG/gameflowchart.png')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/gameflowchart.png"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/gameflowchart.png" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Flowchart for Battle System</h3>
 								</header>
 							</article>
 							<article class="item">
-								<img
-									src="images/calradiaRPG/programflowchart.png"
-									onclick="openModal('images/calradiaRPG/programflowchart.png')"
-									style="height: 70%; width: 70%"
-									alt="Image thumbnail"
-								/>
+								<img src="images/calradiaRPG/programflowchart.png" class="image-item" onclick="openModal('images/calradiaRPG/programflowchart.png')" alt="Image thumbnail" />
 								<div id="myModal">
 									<span onclick="closeModal()">&times;</span>
-									<img
-										id="modalImage"
-										src="images/calradiaRPG/programflowchart.png"
-										alt="Full-size Image"
-									/>
+									<img id="modalImage" src="images/calradiaRPG/programflowchart.png" alt="Full-size Image" />
 								</div>
 								<header>
 									<h3>Flowchart for Character Creation System</h3>
+								</header>
+							</article>
+							<article class="item">
+								<img src="images/calradiaRPG/Score.PNG" class="image-item" onclick="openModal('images/calradiaRPG/Score.PNG')" alt="Image thumbnail" />
+								<div id="myModal">
+									<span onclick="closeModal()">&times;</span>
+									<img id="modalImage" src="images/calradiaRPG/Score.PNG" alt="Full-size Image" />
+								</div>
+								<header>
+									<h3>Score Page</h3>
 								</header>
 							</article>
 						</div>
