--- a/index.html
+++ b/index.html
@@ -280,34 +280,31 @@
 									</header>
 								</article>
 							</div>
-						</div>
+						</div>-->
 					</div>
-				</section>-->
+				</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
 						<div class="container">
-
 							<header>
 								<h2>Contact</h2>
 							</header>
 							Mohd Ameerul Hakeem Bin Abdul Rahman
 							<p><i class="fa-solid fa-envelope"></i> E-mail: mohdameerulhakeem@gmail.com</p>
-
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
-			<div id="footer">
+		<div id="footer">
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; @SeppuCake. All rights reserved.</li><li>Credits to Design & Images: <a href="https://html5up.net">HTML5 UP</a> & <a href="https://unsplash.com">Unsplash</a></li>
-					</ul>
+			<!-- Copyright -->
+				<ul class="copyright">
+					<li>&copy; @SeppuCake. All rights reserved.</li><li>Credits to Design & Images: <a href="https://html5up.net">HTML5 UP</a> & <a href="https://unsplash.com">Unsplash</a></li>
+				</ul>
 
-			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
