added new project
Konbini Inventory (WIP)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Hakeem</strong>,<br />
 								</h2>
-								<p>An inspiring web developer who strive to expand his knowledge and sharpen his skills in software development industry.<br /></p>
+								<p>An aspiring web developer who strive to expand his knowledge and sharpen his skills in software development industry.<br /></p>
 							</header>
 
 							<footer>
@@ -148,7 +148,7 @@
 							<h2>About Me</h2>
 						</header>
 						<a href="#" class="image featured"><img src="images/homepagepic.jpg" alt="" /></a>
-						<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught myself in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
+						<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
 
 						<header>
 							<h2>Skills</h2>
@@ -241,8 +241,21 @@
 									</div>
 								</div>
 								<div class="item">
+									<a href="konbiniinventory.html" class="image fit">
+										<img src="images/konbini/illustratedconcept.png" alt="" />
+									</a>
+									<div class="description">
+										<h3>Freelance Work: Inventory Management System</h3>
+										<a href="konbiniinventory.html">Learn More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 col-12-mobile">
+								<div class="item">
 									<a href="personal-projects.html" class="image fit">
-										<img src="images/personalprojectcropped.png" alt="" />
+										<img src="images/personalprojectcropped.png" alt=""/>
 									</a>
 									<div class="description">
 										<h3>Personal Projects</h3>
@@ -251,36 +264,6 @@
 								</div>
 							</div>
 						</div>
-						<!--<div class="row">
-							<div class="col-6 col-12-mobile">
-								<article class="item">
-									<a href="intern-project.html" class="image fit"><img src="images/reportgen1.png" alt="" /></a>
-									<header>
-										<h3>Full Stack Development (Internship)</h3>
-									</header>
-								</article>
-								<article class="item">
-									<a href="anisotropic.html" class="image fit"><img src="images/anisotropicjavahomepage.png" alt="" /></a>
-									<header>
-										<h3>Freelance Work: Anisotropic Diffusion with Java</h3>
-									</header>
-								</article>
-							</div>
-							<div class="col-6 col-12-mobile">
-								<article class="item">
-									<a href="#" class="image fit"><img src="images/teachingpic.jpg" alt="" /></a>
-									<header>
-										<h3>Tutoring</h3>
-									</header>
-								</article>
-								<article class="item">
-									<a href="personal-projects.html" class="image fit"><img src="images/personalproject.jpg" alt="" /></a>
-									<header>
-										<h3>Personal Projects</h3>
-									</header>
-								</article>
-							</div>
-						</div>-->
 					</div>
 				</section>
 
