Fixed the image sizes uniform
Misaligned image scales fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			.item img {
 				display: block;
 				width: 100%;
-				height: auto;
+				height: 300px;
 				transition: transform 0.3s;
 			}
 			.item:hover img {
