--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<h2>About Me</h2>
 						</header>
 						<a href="#" class="image featured"><img src="images/homepagepic.jpg" alt="" /></a>
-						<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
+						<p class="tab-like" style="text-align: justify;">I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and achieved Cisco Certified Networking Associate (CCNA), I self taught in learning more in developing simple web development and challenge myself in learning new things. I have always been intrigued with technology especially computers. I started tinkering with computers at a very young age. My hobbies outside of coding are playing video games, creating content through video editing, and cooking. With interest in video games and creating content, I try incorporate my interests in self-teaching myself in learning programming languages such as familiarizing with Unity and Java.</p>
 
 						<header>
 							<h2>Skills</h2>
@@ -207,7 +207,7 @@
 							<h2>Portfolio</h2>
 						</header>
 
-						<p class="tab-like" style="text-align: justify;">I have been freelancing and worked on my own free time to further enhance my skills in programming. I have also done my internship as a Junior Software Developer and worked with Compurex Corporation in training my capabilities to become a Full Stack Developer. Other than that, I continued working with local students in teaching and working with their projects as a freelancer.</p>
+						<p class="tab-like" style="text-align: justify;">I have been freelancing and worked on my own free time to further enhance my skills in programming. Accepting challenges from clients to further enhance my knowledge and challenge myself to be more versatile. I have also done my internship as a Junior Software Developer and worked with Compurex Corporation in training my capabilities to become a Full Stack Developer. Other than that, I continued working with local students in teaching and working with their projects as a freelancer.</p>
 
 						<div class="row">
 							<div class="col-6 col-12-mobile">
@@ -217,6 +217,12 @@
 									</a>
 									<div class="description">
 										<h3>Full Stack Development (Internship)</h3>
+										<br>
+										<div class="row">
+											<div class="col-4 col-12-mobile">
+												<b>HTML</b>
+											</div>
+										</div>
 										<a href="intern-project.html">Learn More</a>
 									</div>
 								</div>
